# running-form-analyzer

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
core/: analyzer.py  config.py  detector.py
feedback/: assessment_calculator.py  audio_feedback.py  recommendations.py
metrics/: angle_metrics.py  distance_metrics.py  metrics.py  mobility_metrics.py  step_metrics.py
models/: blazepose_model.py  lite_hrnet.py  movenet.py
tests/: test_angle_calculator.py  test_assessment_calculator.py  test_audio_feedback.py  test_blazepose_model.py  test_config.py  test_detector.py  test_display.py  test_distance_metrics.py  test_filters.py  test_foot_strike_detector.py  test_lite_hrnet.py  test_metric_logger.py  test_metrics.py  test_pose_drawer.py  test_recommendations.py  test_video_player.py  test_video_recorder.py
utils/: angle_calculator.py  filters.py  foot_strike_detector.py
visualization/: display.py  metric_logger.py  pose_drawer.py  video_player.py  video_recorder.py
